# C-Basics

./: CMakeLists.txt
Data_Structure/Lists/Linear_List/Sequencial_Linear_List/: Sequencial_Linear_List.c  compiling_error.txt
Data_Structure/Matrices_N_Vectors/: Makefile.win  main.c  test.dev
Data_Structure/Memory_Allocation/: malloc_&_sizeof.c  malloc_&_sizeof_Example.c
Data_Structure/Modularization/: Modularization.c  compiling_error.txt
Data_Structure/Pointers/: CMakeLists.txt  Pointers.c  compiling_error.txt
Data_Structure/Search_Algorithms/Linear_Search_Multiple_Occurrences/: Linear_Search_Multiple_Occurrences.c
Data_Structure/Search_Algorithms/Linear_Search_W_Pointers/: Linear_Search_W_Pointers.c
Data_Structure/Struct/: Struct.c  Struct_Example.c
Data_Structure/Vector_N_Array/: Vector_Example.c  Vector_N_Array.c  compiling_error.txt
Mathematical_Applications/Quadratic_Equations/: Quadratic_Equations.c
