cmake_minimum_required(VERSION 3.14)
project(criptografia C)

set(CMAKE_C_STANDARD 99)

add_executable(C-Basics_Quadratic_Equations Mathematical_Applications/Quadratic_Equations/Quadratic_Equations.c)
add_executable(C-Basics_Data_Structure Data_Structure/Lists/Linear_List/Sequencial_Linear_List/Sequencial_Linear_List.c)